--- a/MejorPrecio4MVC/Views/Admin/Waiting.cshtml
+++ b/MejorPrecio4MVC/Views/Admin/Waiting.cshtml
@@ -7,6 +7,7 @@
   <ul class="nav navbar-nav">
         <li><a asp-controller="Admin" asp-action="Waiting">Pendientes</a></li> 
         <li><a asp-controller="Admin" asp-action="EXistentes">Existentes</a></li> 
+        <li><a asp-controller="Product" asp-action="Upload">Buscar Producto</a></li>  
 
     </ul>
 </nav>
