--- a/MejorPrecio4MVC/Views/Price/LoadPrice.cshtml
+++ b/MejorPrecio4MVC/Views/Price/LoadPrice.cshtml
@@ -5,9 +5,9 @@
 }
 <h5><button onclick="getLocation()">Obtener ubicacion</button> </h5>
 <form method="post">
-  <h5>Nombre : <input type="text" name="Name" value = "@Model.Name" readonly = "true"> <br></h5>
-  <h5>Descripcion : <input type="text" name="Description" value = "@Model.Description" readonly = "true"> <br></h5>
-  <h5>Codigo de Barras: <input type="text" name="BarCode" value="@Model.BarCode" readonly = "true"> <br> </h5>
+  <h5>Nombre : <input type="text" name="Name" value = "@Model.Name"> <br></h5>
+  <h5>Descripcion : <input type="text" name="Description" value = "@Model.Description" > <br></h5>
+  <h5>Codigo de Barras: <input type="text" name="BarCode" value="@Model.BarCode" > <br> </h5>
   <h5>Precio: <input type="number" name="Price"> <br> </h5>
   <h5>Latitud: <input type="text" id= "Latitude" name="Latitude" value="" > 
   Longitud: <input type="text" id= "Longitude" name="Longitude" value=""> </h5><br>
