--- a/MejorPrecio4MVC/Views/Admin/Existentes.cshtml
+++ b/MejorPrecio4MVC/Views/Admin/Existentes.cshtml
@@ -6,7 +6,8 @@
     <a class="navbar-brand" href="#">MejorPrecio4MVC</a>
   <ul class="nav navbar-nav">
         <li><a asp-controller="Admin" asp-action="Waiting">Pendientes</a></li> 
-        <li><a asp-controller="Admin" asp-action="Existentes">Existentes</a></li> 
+        <li><a asp-controller="Admin" asp-action="Existentes">Existentes</a></li>
+        <li><a asp-controller="Product" asp-action="Upload">Buscar Producto</a></li>  
 
     </ul>
 </nav>
